k8s/sharescraper.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata: 
  name: mongo
  labels:
    app: ac-sharescraper
    module: mongo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ac-sharescraper
        module: mongo
    spec:
      containers:
      - name: mongo
        image: mongo
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-persistent-storage
          mountPath: /data/db
      volumes:
      - name: mongo-persistent-storage
        persistentVolumeClaim:
          claimName: mongo-disk


---

apiVersion: extensions/v1beta1
kind: Deployment
metadata: 
  name: sharescraper-api
  labels:
    app: ac-sharescraper
    module: api
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ac-sharescraper
        module: api
    spec:
      containers:
      - name: sharescraper-api
        image: andycowley/sharescraper-api
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
---

apiVersion: extensions/v1beta1
kind: Deployment
metadata: 
  name: sharescraper-ui
  labels:
    app: ac-sharescraper
    module: ui
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ac-sharescraper
        module: ui
    spec:
      containers:
      - name: sharescraper-ui
        image: andycowley/sharescraper-ui:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: ui
spec:
  ports:
  - port: 8080
    targetPort: 8080
  type: NodePort
  selector:
    app: ac-sharescraper
    module: ui

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ui
  labels:
    app: ac-shaescraper
    module: ui
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"  
    certmanager.k8s.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"  
spec:
  tls:
  - secretName: sharescraper
    hosts:
    - sharescraper.andycowley.uk
  rules:
  - host: sharescraper.andycowley.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: ui
          servicePort: 8080
---
# Headless Service mongo
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  ports:
  - port: 27017
    name: mongo
  clusterIP: None
  selector:
    app: ac-sharescraper
    module: mongo

---
# Headless Service api
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  ports:
  - port: 5000
    name: api
  clusterIP: None
  selector:
    app: ac-sharescraper
    module: api
